title body content changed to content

--- a/SurveyTool/WebContent/_locales/lang_en.properties
+++ b/SurveyTool/WebContent/_locales/lang_en.properties
@@ -58,8 +58,8 @@ msg.error.mandatory=mandatory
 
 button.accept=Accept
 button.add_content.question=Question
-button.add_content.body=Body content
-button.add_content.page_break=page-break
+button.add_content.body=Content
+button.add_content.page_break=Page-break
 button.add_content.section_break=section-break
 button.add_file=Add new file
 button.add_option=Add option
@@ -538,7 +538,7 @@ profile.button.accept=Accept
 #******************
 # body content
 #******************
-bcontent.title=Body content
+bcontent.title=Content (text - multimedia)
 bcontent.statement=Text for body content
 accesibility.bcontent=Below write text for the body content. Use Ctrl/Cmd+B for bold; Ctrl/Cmd+I for italic; Ctrl/Cmd+U to underline; Shift+Tab to reduce indent; Tab to increase indent; Ctrl/Cmd+L to align left; Ctrl/Cmd+E to center; Ctrl/Cmd+R to align right; Ctrl/Cmd+J to justify; Ctrl/Cmd+Z to undo; y Ctrl/Cmd+Y to redo.
 
