--- a/SurveyTool/WebContent/_locales/lang_es.properties
+++ b/SurveyTool/WebContent/_locales/lang_es.properties
@@ -59,8 +59,8 @@ msg.error.mandatory=obligatoria
 
 button.accept=Aceptar
 button.add_content.question=Pregunta
-button.add_content.body=Contenido del cuerpo
-button.add_content.page_break=salto de página
+button.add_content.body=Contenido
+button.add_content.page_break=Salto de página
 button.add_content.section_break=salto de sección
 button.add_file=Agregar fichero
 button.add_option=Agregar opción
@@ -540,7 +540,7 @@ profile.button.accept=Aceptar
 #******************
 # body content
 #******************
-bcontent.title=Contenido introductorio
+bcontent.title=Contenido (texto - multimedia)
 bcontent.statement=Texto para la descripción
 accesibility.bcontent=A continuación escribe el contenido del texto introductorio. Usa Ctrl/Cmd+B para negrita; Ctrl/Cmd+I para cursiva; Ctrl/Cmd+U para subrayar; Shift+Tab para reducir sangría; Tab para aumentar sangría; Ctrl/Cmd+L para alinear izquierda; Ctrl/Cmd+E para centrar; Ctrl/Cmd+R para alinear a la derecha; Ctrl/Cmd+J para justificar; Ctrl/Cmd+Z para deshacer; y Ctrl/Cmd+Y para rehacer.
 
