edit survey other option in questions simple

--- a/SurveyTool/WebContent/_locales/lang_en.properties
+++ b/SurveyTool/WebContent/_locales/lang_en.properties
@@ -63,6 +63,7 @@ button.add_content.page_break=Page-break
 button.add_content.section_break=section-break
 button.add_file=Add new file
 button.add_option=Add option
+button.add_option_other=Add option "Other"
 button.add_row=Add row
 button.add_column=Add column
 button.add_dependence=Add rule
@@ -262,6 +263,7 @@ question.mandatory.no=No
 question.notAnswerRequeried=Optional
 question.edit.legend.options=Options
 question.edit.placeholder.option=Option
+question.edit.placeholder.option.other=Insert instead of Other
 question.edit.aria_label.option=Option title
 question.edit.statementSetting.title=Content settings
 question.edit.description.title=Description / Instructions
@@ -506,6 +508,8 @@ accesibility.question.matrix.add.column=Add column
 accesibility.question.matrix.input.column=Insert column
 accesibility.question.matrix.input.row=Insert row
 accesibility.question.option=Insert option
+accesibility.question.option.legend.other=Other
+accesibility.question.option.label.other=Option label
 accesibility.question.remove.option=Remove option
 accesibility.question.remove.dependence=Remove dependence
 accesibility.question.addfile.option=Add file to option
