--- a/SurveyTool/WebContent/_locales/lang_es.properties
+++ b/SurveyTool/WebContent/_locales/lang_es.properties
@@ -64,6 +64,7 @@ button.add_content.page_break=Salto de página
 button.add_content.section_break=salto de sección
 button.add_file=Agregar fichero
 button.add_option=Agregar opción
+button.add_option_other=Agregar opción "Otros"
 button.add_row=Añadir fila
 button.add_column=Añadir columna
 button.add_dependence=Añadir regla
@@ -263,6 +264,7 @@ question.mandatory.no=No
 question.notAnswerRequeried=Opcional
 question.edit.legend.options=Opciones
 question.edit.placeholder.option=Opcion
+question.edit.placeholder.option.other=Introducir texto en lugar de Otro
 question.edit.aria_label.option=Titulo de la opción
 question.edit.statementSetting.title=Configuración del contenido
 question.edit.description.title=Descripción / Instrucciones
@@ -507,6 +509,9 @@ accesibility.question.matrix.add.column=Añadir columna
 accesibility.question.matrix.input.column=Introducir texto para columna
 accesibility.question.matrix.input.row=Introducir texto para fila
 accesibility.question.option=Introducir texto para opción
+accesibility.question.option.other=Otro
+accesibility.question.option.legend.other=Otro
+accesibility.question.option.label.other=Titulo de opción
 accesibility.question.remove.option=Eliminar opción
 accesibility.question.remove.dependence=Eliminar dependencia
 accesibility.question.addfile.option=Añadir fichero a opción
