survey option other

--- a/SurveyTool/WebContent/_locales/lang_en.properties
+++ b/SurveyTool/WebContent/_locales/lang_en.properties
@@ -515,8 +515,10 @@ accesibility.question.remove.dependence=Remove dependence
 accesibility.question.addfile.option=Add file to option
 accesibility.question.add.option=Add option
 accesibility.question.image=Question image
-accesibility.question.longtextAnswer=Textarea to input your answer
-accesibility.question.shorttextAnswer=Textarea to input your answer
+accesibility.question.longtextAnswer=Text area to input your answer
+accesibility.question.textArea.longtextOther=Write the other answers
+accesibility.question.option.longtextOther=Specify your answer in the following text area
+accesibility.question.shorttextAnswer=Text area to input your answer
 
 button.accesibility_help=Click to know the available editor shortcuts in the editable area below
 accesibility.window.title=Editor shortcuts
