--- a/SurveyTool/WebContent/_locales/lang_es.properties
+++ b/SurveyTool/WebContent/_locales/lang_es.properties
@@ -518,6 +518,8 @@ accesibility.question.addfile.option=Añadir fichero a opción
 accesibility.question.add.option=Añadir opción
 accesibility.question.image=Imagen de la pregunta
 accesibility.question.longtextAnswer=Textarea para introducir tu respuesta
+accesibility.question.textArea.longtextOther=Escriba las otras opciones
+accesibility.question.option.longtextOther=Especifique su respuesta en el siguiente text area
 accesibility.question.shorttextAnswer=Textarea para introducir tu respuesta
 
 button.accesibility_help=Haz click para conocer los atajos de teclado disponibles en el editor de texto de debajo
