Simple question with dorp down list

--- a/SurveyTool/WebContent/_locales/lang_en.properties
+++ b/SurveyTool/WebContent/_locales/lang_en.properties
@@ -274,6 +274,9 @@ question.edit.files.option.title=Option Files
 question.edit.response_settings.title=Response settings
 question.edit.custom_settings.title=Custom options
 question.edit.type=Type
+question=Question
+question.edit.type.answer.radio=Simple (Radio)
+question.edit.type.answer.select=Simple (Combo)
 
 question.edit.logic.option.label=If answer to this question is
 question.edit.logic.option.goto.label=then jump to
@@ -317,10 +320,11 @@ question.new.question_type = Select question type
 question.new.title=Add new question
 question.new.basic_settings.title=Basic settings
 question.new.basic_settings.aria_label.close=Close basic settings
-question.new.formfield=Short answer
-question.new.paragraph=Long text
+question.new.shortText=Short answer
+question.new.longText=Long text
 question.new.multiple=Multiple
-question.new.simple=Simple
+question.new.simpleRadio=Simple (Radio)
+question.new.simpleCombo=Simple (combo)
 question.new.ordering=Ordering
 question.new.grading=Grading
 question.new.matrix=Matrix
@@ -509,6 +513,8 @@ accesibility.question.matrix.input.column=Insert column
 accesibility.question.matrix.input.row=Insert row
 accesibility.question.option=Insert option
 accesibility.question.option.legend.other=Other
+accesibility.question.select.label=Select your answer
+accesibility.question.select.option.default=Select option
 accesibility.question.option.label.other=Option label
 accesibility.question.remove.option=Remove option
 accesibility.question.remove.dependence=Remove dependence
