--- a/SurveyTool/WebContent/_locales/lang_es.properties
+++ b/SurveyTool/WebContent/_locales/lang_es.properties
@@ -275,6 +275,9 @@ question.edit.files.option.title=Ficheros de la opcion
 question.edit.response_settings.title=Configuración respuesta
 question.edit.custom_settings.title=Opciones de personalización
 question.edit.type=Tipo
+question=Pregunta
+question.edit.type.answer.radio=Simple (Radio)
+question.edit.type.answer.select=Simple (Combo)
 
 question.edit.logic.option.label=Si la respuesta a esta pregunta es
 question.edit.logic.option.goto.label=entonces saltar a
@@ -316,8 +319,8 @@ question.new.question_type = Seleccionar tipo de pregunta
 question.new.title=Añadir nueva pregunta
 question.new.basic_settings.title=Configuración basica
 question.new.basic_settings.aria_label.close=Cerrar configuración basica.
-question.new.formfield=Respuesta corta
-question.new.paragraph=Texto largo
+question.new.shortText=Respuesta corta
+question.new.longText=Texto largo
 
 question.new.multiple=Multiple
 question.new.simple=Simple
@@ -511,6 +514,8 @@ accesibility.question.matrix.input.row=Introducir texto para fila
 accesibility.question.option=Introducir texto para opción
 accesibility.question.option.other=Otro
 accesibility.question.option.legend.other=Otro
+accesibility.question.select.label=Selecciona su respuesta
+accesibility.question.select.option.default=Seleccionar opción
 accesibility.question.option.label.other=Titulo de opción
 accesibility.question.remove.option=Eliminar opción
 accesibility.question.remove.dependence=Eliminar dependencia
