simple question drop down list type, and other option in combo

--- a/SurveyTool/WebContent/_locales/lang_es.properties
+++ b/SurveyTool/WebContent/_locales/lang_es.properties
@@ -490,6 +490,7 @@ file.player.yt.alert.volume_min=El volumen está al mínimo.
 confirmation.title=Confirmación
 confirmation.remove.title=Borrar elemento
 confirmation.move.title=Mover pregunta
+confirmation.questionTypeSimple.change.title=Cambiar el tipo de pregunta simple
 confirmation.remove.message=Esta acción borrará <span id="confirmRemoveQuestion" class="hidden">la pregunta: </span><span class="elem-to-remove-text" id="elementToRemoveText"></span>.
 confirmation.remove.message.dependences=<span id="questionDPlural">Las preguntas</span><span id="questionDSingular">La pregunta</span> <span id='confirmRemoveQuestionDepList' class='hidden'></span> <span id="questionDHave">tienen</span><span id="questionDHas">tiene</span> dependencias asociadas a esta pregunta. 
 confirmation.remove.message.logic=<span id="questionLPlural">Las preguntas</span><span id="questionLSingular">La pregunta</span> <span id='confirmRemoveQuestionLogicList' class='hidden'></span> <span id="questionLHave">tienen</span><span id="questionLHas">tiene</span> lógica que lleva a esta pregunta. 
@@ -497,6 +498,7 @@ confirmation.remove.message.rules=Estas reglas se verán afectadas con el cambio.
 confirmation.remove.message.section.rules=Todas las preguntas contenidas en esta sección serán borradas, esto puede afectar a las reglas de lógica y dependencias.
 confirmation.remove.message.sure=¿Está seguro de que quiere borrarlo?
 confirmation.move.message.withdep=La página destino contiene preguntas asociadas a dependencias y lógica. Si mueve la pregunta estas dependencias y lógica serán eliminadas. ¿Está seguro de que quiere mover la pregunta? 
+confirmation.questionTypeSimple.change.message=En esta pregunta existen opciones que tienen vihinculadas imágenes. Las preguntas simples de tipo combo no mostrarán las imagenes. ¿Desea continuar?
 
 #******************
 # Accesibility
