--- a/SurveyTool/WebContent/_locales/lang_en.properties
+++ b/SurveyTool/WebContent/_locales/lang_en.properties
@@ -491,13 +491,15 @@ file.player.yt.alert.volume_min=Volume level is minimum.
 confirmation.title=Confirmation
 confirmation.remove.title=Remove element
 confirmation.move.title=Move question
+confirmation.questionTypeSimple.change.title=Change the simple question type
 confirmation.remove.message=This action will remove <span id="confirmRemoveQuestion" class="hidden">the question: </span><span class="elem-to-remove-text" id="elementToRemoveText"></span>.
 confirmation.remove.message.dependences=The <span id="questionDPlural">questions</span><span id="questionDSingular">question</span> <span id='confirmRemoveQuestionDepList'></span> <span id="questionDHave">have</span><span id="questionDHas">has</span> dependences associated with this question. 
 confirmation.remove.message.logic=The <span id="questionLPlural">questions</span><span id="questionLSingular">question</span> <span id='confirmRemoveQuestionLogicList'></span> <span id="questionLHave">have</span><span id="questionLHas">has</span> logic that leads to this question. 
 confirmation.remove.message.rules=This rules will be affected by the change.
 confirmation.remove.message.section.rules=All questions contained in this section will be removed, this can affect to the logic and dependence rules.
 confirmation.remove.message.sure=Are you sure to do it?
-confirmation.move.message.withdep=The destination page contains questions associated with dependences and logic. If you move the question these dependences and logic will be deleted. Are you sure to move this question?
+confirmation.move.message.withdep=The destination page contains questions associated with dependences and logic. If you move the question these dependences and logic will be deleted. Are you sure to move this question? 
+confirmation.questionTypeSimple.change.message=This question has options with images. The simple question type combo won't display this images. Would you like to make the change?
 
 #******************
 # Accesibility
