solved dependences issues with simpleRadio and simpleCombo

--- a/SurveyTool/WebContent/_locales/lang_es.properties
+++ b/SurveyTool/WebContent/_locales/lang_es.properties
@@ -323,6 +323,8 @@ question.new.shortText=Respuesta corta
 question.new.longText=Texto largo
 
 question.new.multiple=Multiple
+question.new.simpleRadio=Simple (Radio)
+question.new.simpleCombo=Simple (combo)
 question.new.simple=Simple
 question.new.ordering=Ordenado
 question.new.grading=Calificación
