precentage survey complete text

--- a/SurveyTool/WebContent/_locales/lang_en.properties
+++ b/SurveyTool/WebContent/_locales/lang_en.properties
@@ -669,6 +669,7 @@ survey.process.numLimits=Number between
 survey.process.main.error.title=UNABLE TO CONTINUE
 survey.process.main.error.desc.error=There are errors in the answers. Please correct them before continuing.
 survey.process.main.error.desc.mandatory=Please answer all mandatory questions.
+survey.process.percentage.complete=Completed
 
 #******************
 # User Panel
