--- a/SurveyTool/WebContent/_locales/lang_es.properties
+++ b/SurveyTool/WebContent/_locales/lang_es.properties
@@ -673,6 +673,7 @@ survey.process.numLimits=Número entre
 survey.process.main.error.title=NO ES POSIBLE CONTINUAR CON LA ENCUESTA
 survey.process.main.error.desc.error=Existe respuestas erroneas. Por favor, responda correctamente para continuar.
 survey.process.main.error.desc.mandatory=Por favor, responda las preguntas obligatorias.
+survey.process.percentage.complete=Completado
 
 #******************
 # User Panel
