poll ip filter disable

--- a/SurveyTool/WebContent/_locales/lang_es.properties
+++ b/SurveyTool/WebContent/_locales/lang_es.properties
@@ -283,6 +283,8 @@ question.edit.matrix.type.free=Respuesta libre
 
 question.matrix.rowoption=Elementos (filas)
 question.matrix.columnoption=Etiquetas de escala (columnas)
+question.edit.matrix.placeholder.item=Elemento
+question.edit.matrix.placeholder.column=Columna
 
 question.long.chars=Limite de caracteres
 question.long.chars.label=Configurar limite para
