Scale question type with points settings

--- a/SurveyTool/WebContent/_locales/lang_en.properties
+++ b/SurveyTool/WebContent/_locales/lang_en.properties
@@ -260,6 +260,8 @@ question.otherLength=Other field length
 question.mandatory=Mandatory
 question.mandatory.yes=Yes
 question.mandatory.no=No
+question.scale.type=Scale type
+question.scale.type.points=points
 question.notAnswerRequeried=Optional
 question.edit.legend.options=Options
 question.edit.placeholder.option=Option
