--- a/SurveyTool/WebContent/_locales/lang_es.properties
+++ b/SurveyTool/WebContent/_locales/lang_es.properties
@@ -261,6 +261,8 @@ question.otherLength=Tamaño de otros campos
 question.mandatory=Obligatorio
 question.mandatory.yes=Sí
 question.mandatory.no=No
+question.scale.type=Tipo de escala
+question.scale.type.points=puntos
 question.notAnswerRequeried=Opcional
 question.edit.legend.options=Opciones
 question.edit.placeholder.option=Opcion
@@ -306,6 +308,8 @@ question.edit.matrix.type.free=Respuesta libre
 
 question.matrix.rowoption=Elementos (filas)
 question.matrix.columnoption=Etiquetas de escala (columnas)
+question.edit.matrix.placeholder.item=Elemento
+question.edit.matrix.placeholder.column=Columna
 
 question.long.chars=Limite de caracteres
 question.long.chars.label=Configurar limite para
