scale question type width point labels editable, but without update in edit survey when change likert type

--- a/SurveyTool/WebContent/_locales/lang_en.properties
+++ b/SurveyTool/WebContent/_locales/lang_en.properties
@@ -336,6 +336,8 @@ question.new.code=Code
 question.form.scale.liker_legend.t_disgree=Totally disagree
 question.form.scale.liker_legend.indiferent=Indiferent
 question.form.scale.liker_legend.t_agree=Totally agree
+question.form.scale.liker.point_label=Point label
+question.form.scale.liker.point_label.legend=Response point labels (These labels are optional)
 
 question.form.options.text.inputTextBoxInput=Input mode
 question.form.options.text.inputTextBoxInput.free=Free text
