--- a/SurveyTool/WebContent/_locales/lang_es.properties
+++ b/SurveyTool/WebContent/_locales/lang_es.properties
@@ -339,6 +339,8 @@ question.new.code=Código
 question.form.scale.liker_legend.t_disgree=Totalmente en desacuerdo
 question.form.scale.liker_legend.indiferent=Indiferente
 question.form.scale.liker_legend.t_agree=Totalmente de acuerdo
+question.form.scale.liker.point_label=Etiqueta del punto
+question.form.scale.liker.point_label.legend=Etiquetas de punto de respuesta (Estas etiquetas son opcionales)
 
 question.form.options.text.inputTextBoxInput=Modo de entrada
 question.form.options.text.inputTextBoxInput.free=Texto libre
