Final version of Scale question type, with type and label setting

--- a/SurveyTool/WebContent/_locales/lang_en.properties
+++ b/SurveyTool/WebContent/_locales/lang_en.properties
@@ -504,6 +504,8 @@ confirmation.remove.message.section.rules=All questions contained in this sectio
 confirmation.remove.message.sure=Are you sure to do it?
 confirmation.move.message.withdep=The destination page contains questions associated with dependences and logic. If you move the question these dependences and logic will be deleted. Are you sure to move this question? 
 confirmation.questionTypeSimple.change.message=This question has options with images. The simple question type combo won't display this images. Would you like to make the change?
+confirmation.questionScaleType.change.title=Change the scale type
+confirmation.questionScaleType.change.message=If you change the scale type, all labels will be removed and the labels inputs number will change. Would you like to make the change?
 
 #******************
 # Accesibility
