--- a/SurveyTool/WebContent/_locales/lang_es.properties
+++ b/SurveyTool/WebContent/_locales/lang_es.properties
@@ -507,6 +507,8 @@ confirmation.remove.message.section.rules=Todas las preguntas contenidas en esta
 confirmation.remove.message.sure=¿Está seguro de que quiere borrarlo?
 confirmation.move.message.withdep=La página destino contiene preguntas asociadas a dependencias y lógica. Si mueve la pregunta estas dependencias y lógica serán eliminadas. ¿Está seguro de que quiere mover la pregunta? 
 confirmation.questionTypeSimple.change.message=En esta pregunta existen opciones que tienen vihinculadas imágenes. Las preguntas simples de tipo combo no mostrarán las imagenes. ¿Desea continuar?
+confirmation.questionScaleType.change.title=Cambiar el tipo de escala
+confirmation.questionScaleType.change.message=Si cambias el tipo de escala, todas las etiquetas serán borradas y variará el numero de etiquetas según la opción seleccionada.  ¿Desea continuar con el cambio?
 
 #******************
 # Accesibility
