confirmation to finish survey status

--- a/SurveyTool/WebContent/_locales/lang_en.properties
+++ b/SurveyTool/WebContent/_locales/lang_en.properties
@@ -506,6 +506,8 @@ confirmation.move.message.withdep=The destination page contains questions associ
 confirmation.questionTypeSimple.change.message=This question has options with images. The simple question type combo won't display this images. Would you like to make the change?
 confirmation.questionScaleType.change.title=Change the scale type
 confirmation.questionScaleType.change.message=If you change the scale type, all labels will be removed and the labels inputs number will change. Would you like to make the change?
+confirmation.finish.survey.title=Finish survey
+confirmation.finish.survey.message=Once a survey is finished, it can only be activated by an administrator. Do you want to end the survey?
 
 #******************
 # Accesibility
