--- a/SurveyTool/WebContent/_locales/lang_es.properties
+++ b/SurveyTool/WebContent/_locales/lang_es.properties
@@ -509,6 +509,8 @@ confirmation.move.message.withdep=La página destino contiene preguntas asociadas
 confirmation.questionTypeSimple.change.message=En esta pregunta existen opciones que tienen vihinculadas imágenes. Las preguntas simples de tipo combo no mostrarán las imagenes. ¿Desea continuar?
 confirmation.questionScaleType.change.title=Cambiar el tipo de escala
 confirmation.questionScaleType.change.message=Si cambias el tipo de escala, todas las etiquetas serán borradas y variará el numero de etiquetas según la opción seleccionada.  ¿Desea continuar con el cambio?
+confirmation.finish.survey.title=Finalizar encuesta
+confirmation.finish.survey.message=Una vez finalizada una encuesta solo podrá ser activada por un administrador. ¿Desea finalizar la encuesta?
 
 #******************
 # Accesibility
