survey ip filter setting

--- a/SurveyTool/WebContent/_locales/lang_es.properties
+++ b/SurveyTool/WebContent/_locales/lang_es.properties
@@ -393,6 +393,7 @@ survey.edit.info.aria_label.copy=Copiar URL de la encuesta en el portapapeles.
 survey.edit.info.label.project=para el proyecto
 survey.edit.info.label.short_description=Descripcion corta
 survey.edit.info.label.url=URL de la Encuesta
+survey.edit.info.label.ipfilter=No pormitir hacer más de una encuesta desde una misma direccion IP
 survey.edit.section.title=Titulo Seccion
 survey.edit.page.title=Página
 survey.edit.section.list=Sección
