--- a/SurveyTool/WebContent/_locales/lang_en.properties
+++ b/SurveyTool/WebContent/_locales/lang_en.properties
@@ -390,6 +390,7 @@ survey.edit.info.aria_label.copy=Copy survey URL to clipboard
 survey.edit.info.label.project=for project
 survey.edit.info.label.short_description=Short description
 survey.edit.info.label.url=Survey URL
+survey.edit.info.label.ipfilter=Do not allow more than one survey from the same IP address
 survey.edit.section.title=Section title
 survey.edit.section.list=Section
 survey.edit.section.listQuestions=List of questions
