user panel login and register

--- a/SurveyTool/WebContent/_locales/lang_en.properties
+++ b/SurveyTool/WebContent/_locales/lang_en.properties
@@ -700,3 +700,6 @@ userpanel.registration.verification.title=Email verification
 userpanel.registration.verification.true.content=Your account has been successfully activated. You can now access the user panel with the following button to login.
 userpanel.registration.verification.false.content=This link is no longer available. You may already be registered, or that the link has expired.
 userpanel.registration.confirmation.button=Log in
+
+# Home
+userpanel.home.title=Home
