--- a/SurveyTool/WebContent/_locales/lang_es.properties
+++ b/SurveyTool/WebContent/_locales/lang_es.properties
@@ -707,3 +707,6 @@ userpanel.registration.verification.title=Verificación de email
 userpanel.registration.verification.true.content=Su cuenta ha sido activada correctamente. Ya puede iniciar sesión en el panel de usuario mendiante el siguiente botón.
 userpanel.registration.verification.false.content=Este link ya no está disponible. Puede que ya esté registrado o que el link haya expirado.
 userpanel.registration.confirmation.button=Iniciar sesión
+
+# Home
+userpanel.home.title=Inicio
