Jira CEP4A-101: Registro perfil básico finished

--- a/SurveyTool/WebContent/_locales/lang_en.properties
+++ b/SurveyTool/WebContent/_locales/lang_en.properties
@@ -52,6 +52,8 @@ msg.error.inputNumber=Format number incorrect. Maximum number of decimals:
 msg.error.error_in=Error in
 msg.error.mandatory=mandatory
 
+msg.error.basicprofile.dateformat=Select a valid date or unselect date
+
 #******************
 # Buttons
 #******************
@@ -700,6 +702,25 @@ userpanel.registration.verification.title=Email verification
 userpanel.registration.verification.true.content=Your account has been successfully activated. You can now access the user panel with the following button to login.
 userpanel.registration.verification.false.content=This link is no longer available. You may already be registered, or that the link has expired.
 userpanel.registration.confirmation.button=Log in
+
+#Basic profile
+userpanel.basicprofile.title=My profile
+userpanel.basicprofile.form.firstname.label=First name
+userpanel.basicprofile.form.firstname.placeholder=First name
+userpanel.basicprofile.form.lastname.label=Last name
+userpanel.basicprofile.form.lastname.placeholder=Last name
+userpanel.basicprofile.form.birthdate.legend=Date of birth
+userpanel.basicprofile.form.birthdate.select.day.label=Day
+userpanel.basicprofile.form.birthdate.select.day.default=Day
+userpanel.basicprofile.form.birthdate.select.month.label=Month
+userpanel.basicprofile.form.birthdate.select.month.default=Month
+userpanel.basicprofile.form.birthdate.select.year.label=Year
+userpanel.basicprofile.form.birthdate.select.year.default=Year
+userpanel.basicprofile.form.gender.legend=Gender
+userpanel.basicprofile.form.gender.radio.male.label=Male
+userpanel.basicprofile.form.gender.radio.female.label=Female
+userpanel.basicprofile.form.button.skip=Skip
+userpanel.basicprofile.form.button.done=Done
 
 # Home
 userpanel.home.title=Home
