--- a/SurveyTool/WebContent/_locales/lang_es.properties
+++ b/SurveyTool/WebContent/_locales/lang_es.properties
@@ -53,6 +53,8 @@ msg.error.inputNumber=Formato numérico incorrecto
 msg.error.error_in=Error en la
 msg.error.mandatory=obligatoria
 
+msg.error.basicprofile.dateformat=Seleccione una fecha válida o deseleccione la fecha
+
 #******************
 # Buttons
 #******************
@@ -707,6 +709,25 @@ userpanel.registration.verification.title=Verificación de email
 userpanel.registration.verification.true.content=Su cuenta ha sido activada correctamente. Ya puede iniciar sesión en el panel de usuario mendiante el siguiente botón.
 userpanel.registration.verification.false.content=Este link ya no está disponible. Puede que ya esté registrado o que el link haya expirado.
 userpanel.registration.confirmation.button=Iniciar sesión
+
+#Basic profile
+userpanel.basicprofile.title=Mi perfil
+userpanel.basicprofile.form.firstname.label=Nombre
+userpanel.basicprofile.form.firstname.placeholder=Nombre
+userpanel.basicprofile.form.lastname.label=Apellidos
+userpanel.basicprofile.form.lastname.placeholder=Apellidos
+userpanel.basicprofile.form.birthdate.legend=Fecha de nacimiento
+userpanel.basicprofile.form.birthdate.select.day.label=Día
+userpanel.basicprofile.form.birthdate.select.day.default=Día
+userpanel.basicprofile.form.birthdate.select.month.label=Mes
+userpanel.basicprofile.form.birthdate.select.month.default=Mes
+userpanel.basicprofile.form.birthdate.select.year.label=Año
+userpanel.basicprofile.form.birthdate.select.year.default=Año
+userpanel.basicprofile.form.gender.legend=Genero
+userpanel.basicprofile.form.gender.radio.male.label=Masculito
+userpanel.basicprofile.form.gender.radio.female.label=Femenino
+userpanel.basicprofile.form.button.skip=Omitir
+userpanel.basicprofile.form.button.done=Hecho
 
 # Home
 userpanel.home.title=Inicio
