my surveys without survey link

--- a/SurveyTool/WebContent/_locales/lang_en.properties
+++ b/SurveyTool/WebContent/_locales/lang_en.properties
@@ -724,3 +724,16 @@ userpanel.basicprofile.form.button.done=Done
 
 # Home
 userpanel.home.title=Home
+
+# My Surveys
+userpanel.mysurveys.title=My surveys
+userpanel.mysurveys.table.column.deadline=Deadline
+userpanel.mysurveys.table.column.deadline.until=Open until
+userpanel.mysurveys.table.column.deadline.undefined=Open
+userpanel.mysurveys.table.column.deadline.closed=Closed
+userpanel.mysurveys.table.column.progress=Progress
+userpanel.mysurveys.table.column.progress.completed=Completed
+userpanel.mysurveys.tab.surveys.state.all=All surveys
+userpanel.mysurveys.tab.surveys.state.new=New
+userpanel.mysurveys.tab.surveys.state.inprogress=In progress
+userpanel.mysurveys.tab.surveys.state.completed=Completed
