--- a/SurveyTool/WebContent/_locales/lang_es.properties
+++ b/SurveyTool/WebContent/_locales/lang_es.properties
@@ -731,3 +731,16 @@ userpanel.basicprofile.form.button.done=Hecho
 
 # Home
 userpanel.home.title=Inicio
+
+# My Surveys
+userpanel.mysurveys.title=Mis encuestas
+userpanel.mysurveys.table.column.deadline=Fecha límite
+userpanel.mysurveys.table.column.deadline.until=Disponible hasta
+userpanel.mysurveys.table.column.deadline.undefined=Abierto
+userpanel.mysurveys.table.column.deadline.closed=Cerrado
+userpanel.mysurveys.table.column.progress.completed=Completado
+userpanel.mysurveys.table.column.progress=Progreso
+userpanel.mysurveys.tab.surveys.state.all=Todas las encuestas
+userpanel.mysurveys.tab.surveys.state.new=Nuevo
+userpanel.mysurveys.tab.surveys.state.inprogress=En progreso
+userpanel.mysurveys.tab.surveys.state.completed=Completado
