ip filter notice

--- a/SurveyTool/WebContent/_locales/lang_es.properties
+++ b/SurveyTool/WebContent/_locales/lang_es.properties
@@ -623,6 +623,8 @@ survey.process.page.state.finished.title=Encuesta cerrada.
 survey.process.page.state.finished.body=Esta encuesta ya no está disponible. Muchas gracias por su colaboración.
 survey.process.page.state.paused.title=Encuesta no disponible temporalmente.
 survey.process.page.state.paused.body=Esta encuesta no está disponible, por favor, vuelva a intentarlo más tarde. Muchas gracias por su colaboración.
+survey.process.page.ipfilter.title=Aviso sobre el tratamiento de datos.
+survey.process.page.ipfilter.body=Con motivo de proporcionarle una buena experiencia durante esta encuesta, su dirección IP será almacenada en el sistema. ¿Acepta continuar?
 survey.process.charCounter=CARACTERES.
 survey.process.title.charLimit=CARACTERES MAX.
 survey.process.desc.charLimit=No podrá seguir escribiendo debido a que ha alcanzado el limite de caracteres. 
