--- a/SurveyTool/WebContent/_locales/lang_en.properties
+++ b/SurveyTool/WebContent/_locales/lang_en.properties
@@ -619,6 +619,8 @@ survey.process.page.state.finished.title=Survey closed.
 survey.process.page.state.finished.body=This survey is not already available. Thank you very much for your collaboration.
 survey.process.page.state.paused.title=Survey not available temporarily.
 survey.process.page.state.paused.body=This survey is not available, please, try it later. Thank you very much for your collaboration.
+survey.process.page.ipfilter.title=Notice about data processing.
+survey.process.page.ipfilter.body=In order to provide a good experience during the survey, your IP address will be stored in the system. Do you accept to continue?
 survey.process.charCounter=CHARACTERS.
 survey.process.title.charLimit=CHARACTERS MAX.
 survey.process.desc.charLimit=You can not continue writing because it has reached the limit of characters.
