footer links pages

--- a/SurveyTool/WebContent/_locales/lang_en.properties
+++ b/SurveyTool/WebContent/_locales/lang_en.properties
@@ -9,6 +9,7 @@ master.footer.link.legal=Legal disclaimer
 master.footer.link.cookies=Cookies policy
 master.footer.link.accessibility=Accessibility
 master.footer.link.contact=Contact information
+master.footer.link.privacy=Privacy policy
 master.footer.content=This service is provided by ILUNION Technology & Accessibility in the context of the Prosperity4All project. This project has received funding from the European Union\u2019s Seventh Framework Programme for research, technological development and demonstration under grant agreement no 610510.
 
 #******************
@@ -639,3 +640,15 @@ survey.process.numLimits=Number between
 survey.process.main.error.title=UNABLE TO CONTINUE
 survey.process.main.error.desc.error=There are errors in the answers. Please correct them before continuing.
 survey.process.main.error.desc.mandatory=Please answer all mandatory questions.
+
+#******************
+# Footer links contents
+#******************
+
+survey.footer.link.page.about.title=About
+survey.footer.link.page.about.body=This service is provided by ILUNION Technology & Accessibility in the context of the Prosperity4All project. This project has received funding from the European Union\u2019s Seventh Framework Programme for research, technological development and demonstration under grant agreement no 610510.
+survey.footer.link.page.cookies.title=Cookies
+survey.footer.link.page.cookies.body=We use our own and third-party cookies to improve our services by analyzing your browsing habits. If you continue browsing this page, we believe that you accept its use.
+survey.footer.link.page.contact.title=Información de contacto
+survey.footer.link.page.contact.body=<p>Si quiere ponerse en contacto con los responsables de ILUNION Tecnología y Accesibilidad, escriba a iluaepidi@gmail.com</p><p>Si quiere ponerse en contacto con los responsables del proyecto Prosperity4all, escriba a rtf [at] raisingthefloor.org</p>
+
