--- a/SurveyTool/WebContent/_locales/lang_es.properties
+++ b/SurveyTool/WebContent/_locales/lang_es.properties
@@ -9,6 +9,7 @@ master.footer.link.legal=Nota legal
 master.footer.link.cookies=Política de cookies
 master.footer.link.accessibility=Accesibilidad
 master.footer.link.contact=Información del contacto
+master.footer.link.privacy=Política de privacidad
 master.footer.content=Este servicio esta proporcionado por ILUNION Tecnología y Accesibilidad en el contexto del proyecto Prosperity4All. Este proyecto ha recibido financiación de la Unión Europea\u2019s Séptimo Programa Marco de investigación, desarrollo tecnológicamente y demostrado en virtud de acuerdo de subvención no 610510.
 
 #******************
@@ -643,3 +644,18 @@ survey.process.numLimits=Número entre
 survey.process.main.error.title=NO ES POSIBLE CONTINUAR CON LA ENCUESTA
 survey.process.main.error.desc.error=Existe respuestas erroneas. Por favor, responda correctamente para continuar.
 survey.process.main.error.desc.mandatory=Por favor, responda las preguntas obligatorias.
+
+#******************
+# Footer links contents
+#******************
+
+survey.footer.link.page.about.title=Acerca de
+survey.footer.link.page.about.body=Este servicio es proporcionado por ILUNION Tecnología y Accessibilidad en el contexto del proyecto Prosperity4All. Este proyecto ha recibido financiación del Séptimo Programa Marco de investigación, desarrollo tecnológico y demostración de la Unión Europea en virtud del acuerdo de subvención nº 610510.
+survey.footer.link.page.cookies.title=Cookies
+survey.footer.link.page.cookies.body=Usamos cookies propias y de terceros para mejorar nuestros servicios mediante el análisis de tus hábitos de navegación. Si continúas navegando en esta página, consideramos que aceptas su uso.
+survey.footer.link.page.contact.title=Contact information
+survey.footer.link.page.contact.body=<p>If you want to contact people from ILUNION Technology & Accessibility, please, write an email to iluaepidi@gmail.com</p><p>If you want to get in touch with Prosperity4all project managers, please, write an email to rtf [at] raisingthefloor.org</p>
+
+
+
+
