solved contact page language error

--- a/SurveyTool/WebContent/_locales/lang_en.properties
+++ b/SurveyTool/WebContent/_locales/lang_en.properties
@@ -649,6 +649,6 @@ survey.footer.link.page.about.title=About
 survey.footer.link.page.about.body=This service is provided by ILUNION Technology & Accessibility in the context of the Prosperity4All project. This project has received funding from the European Union\u2019s Seventh Framework Programme for research, technological development and demonstration under grant agreement no 610510.
 survey.footer.link.page.cookies.title=Cookies
 survey.footer.link.page.cookies.body=We use our own and third-party cookies to improve our services by analyzing your browsing habits. If you continue browsing this page, we believe that you accept its use.
-survey.footer.link.page.contact.title=Información de contacto
-survey.footer.link.page.contact.body=<p>Si quiere ponerse en contacto con los responsables de ILUNION Tecnología y Accesibilidad, escriba a iluaepidi@gmail.com</p><p>Si quiere ponerse en contacto con los responsables del proyecto Prosperity4all, escriba a rtf [at] raisingthefloor.org</p>
+survey.footer.link.page.contact.title=Contact information
+survey.footer.link.page.contact.body=<p>If you want to contact people from ILUNION Technology & Accessibility, please, write an email to iluaepidi@gmail.com</p><p>If you want to get in touch with Prosperity4all project managers, please, write an email to rtf [at] raisingthefloor.org</p>
 
