--- a/SurveyTool/WebContent/_locales/lang_es.properties
+++ b/SurveyTool/WebContent/_locales/lang_es.properties
@@ -653,8 +653,8 @@ survey.footer.link.page.about.title=Acerca de
 survey.footer.link.page.about.body=Este servicio es proporcionado por ILUNION Tecnología y Accessibilidad en el contexto del proyecto Prosperity4All. Este proyecto ha recibido financiación del Séptimo Programa Marco de investigación, desarrollo tecnológico y demostración de la Unión Europea en virtud del acuerdo de subvención nº 610510.
 survey.footer.link.page.cookies.title=Cookies
 survey.footer.link.page.cookies.body=Usamos cookies propias y de terceros para mejorar nuestros servicios mediante el análisis de tus hábitos de navegación. Si continúas navegando en esta página, consideramos que aceptas su uso.
-survey.footer.link.page.contact.title=Contact information
-survey.footer.link.page.contact.body=<p>If you want to contact people from ILUNION Technology & Accessibility, please, write an email to iluaepidi@gmail.com</p><p>If you want to get in touch with Prosperity4all project managers, please, write an email to rtf [at] raisingthefloor.org</p>
+survey.footer.link.page.contact.title=Información de contacto
+survey.footer.link.page.contact.body=<p>Si quiere ponerse en contacto con los responsables de ILUNION Tecnología y Accesibilidad, escriba a iluaepidi@gmail.com</p><p>Si quiere ponerse en contacto con los responsables del proyecto Prosperity4all, escriba a rtf [at] raisingthefloor.org</p>
 
 
 
