Corregidos errores validacion HTML

--- a/SurveyTool/WebContent/_locales/lang_en.properties
+++ b/SurveyTool/WebContent/_locales/lang_en.properties
@@ -10,6 +10,7 @@ master.footer.link.cookies=Cookies policy
 master.footer.link.accessibility=Accessibility
 master.footer.link.contact=Contact information
 master.footer.content=This service is provided by ILUNION Technology & Accessibility in the context of the Prosperity4All project. This project has received funding from the European Union\u2019s Seventh Framework Programme for research, technological development and demonstration under grant agreement no 610510.
+master.footer.flag.alt = European flag image
 
 #******************
 # Errors
