--- a/SurveyTool/WebContent/_locales/lang_es.properties
+++ b/SurveyTool/WebContent/_locales/lang_es.properties
@@ -10,6 +10,7 @@ master.footer.link.cookies=Política de cookies
 master.footer.link.accessibility=Accesibilidad
 master.footer.link.contact=Información del contacto
 master.footer.content=Este servicio esta proporcionado por ILUNION Tecnología y Accesibilidad en el contexto del proyecto Prosperity4All. Este proyecto ha recibido financiación de la Unión Europea\u2019s Séptimo Programa Marco de investigación, desarrollo tecnológicamente y demostrado en virtud de acuerdo de subvención no 610510.
+master.footer.flag.alt = Imagen de bandera europea
 
 #******************
 # Errors
