correccion boton cerrar logica, added title Cerrar ventana al boton

--- a/SurveyTool/WebContent/_locales/lang_en.properties
+++ b/SurveyTool/WebContent/_locales/lang_en.properties
@@ -74,6 +74,7 @@ button.add_logic=Set logic
 button.cancel=Cancel
 button.close=Close
 button.close.dependences=Close dependences
+button.close.window=Close window
 button.close.logic=Close logic
 button.create=Create
 button.create_new=Create new
