--- a/SurveyTool/WebContent/_locales/lang_es.properties
+++ b/SurveyTool/WebContent/_locales/lang_es.properties
@@ -75,6 +75,7 @@ button.add_logic=Añadir lógica
 button.cancel=Cancelar
 button.close=Cerrar
 button.close.dependences=Cerrar dependencias
+button.close.window=Cerrar ventana
 button.close.logic=Cerrar lógica
 button.create=Crear
 button.create_new=Crear nuevo
