Correcciones accesibilidad - Traducciones de botones eliminar

--- a/SurveyTool/WebContent/_locales/lang_en.properties
+++ b/SurveyTool/WebContent/_locales/lang_en.properties
@@ -155,6 +155,11 @@ general.page=page
 general.question=question
 general.survey_info=survey info
 
+######TODO
+general.survey.filters.numRecord=Modified the number of surveys per page, changed to
+general.survey.filters.find=Showing surveys that contain the text
+general.survey.filters.states=Showing surveys with the state
+######EOFTODO
 #******************
 # Home
 #******************
