--- a/SurveyTool/WebContent/_locales/lang_es.properties
+++ b/SurveyTool/WebContent/_locales/lang_es.properties
@@ -155,6 +155,11 @@ general.page=página
 general.question=pregunta
 general.survey_info=información de encuesta
 
+######TODO
+general.survey.filters.numRecord=Modificado el numero de encuestas por página, cambiado a
+general.survey.filters.find=Mostrando encuestas que contengan el texto
+general.survey.filters.states=Mostrando encuestas con el estado
+######EOFTODO
 #******************
 # Home
 #******************
